@@ -20,6 +20,7 @@ README
 scripts/abc-path-solve
 scripts/bump-version-number.pl
 t/00-load.t
+t/input-from-string.t
 t/layouts/brain-bashers.2010-12-21.abc-path
 t/layouts/brain-bashers.2010-12-22.abc-path
 t/pod-coverage.t
